fixed feature image size and spacing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -85,11 +85,12 @@
 
   img {
     width: 75%;
+    height: 75%;
   }
 
   button {
     width: 85%;
-    height: 4rem;
+    height: 6rem;
     margin-bottom: 0.125rem;
     background: var(--card-bg-alt-2);
     color: var(--card-text-alt-2);
@@ -97,6 +98,7 @@
     font-size: 1.5rem;
     display: grid;
     place-items: center;
+    padding: 0;
   }
 }
 
